# intro_docker

./: pyproject.toml
api_exemple/: Dockerfile  main.py  test_api.py
exercice1/blague/: Dockerfile  blague.py
exercice1/hello-world/: Dockerfile
exercice1/liste/: Dockerfile  liste_courses.py
