[tool.poetry]
name = "docker-project"
version = "0.1.0"
description = ""
authors = ["Stéphanie Parcollet <st.parcollet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
